[tool.poetry]
name = "morpho"
version = "1.0.0a2"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = """
    /typings
|   /tests
"""

[tool.poetry.dependencies]
python = "^3.8"
py-eureka-client = "^0.7.4"
dataclasses-json = "^0.3.7"
googleapis-common-protos = "^1.6.0"
falcon = "^2.0.0"
waitress = "^1.4.2"
psycopg2 = "^2.8.4"
requests = "^2.22.0"
colorama = "^0.4.3"
connexion = {version = "2.6.0", extras = ["swagger-ui"]}
flask = "^1.1.1"
pytest = "^5.4.1"
flask-swagger-ui = "^3.25.0"
swagger-ui-py = "^0.2.1"
toml = "^0.10.0"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
pydantic = "^1.5.1"
wrapt_timeout_decorator = "^1.3.1"
regex = "^2020.6.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pyenchant = "^3.0.1"
Sphinx = "^3.0.1"
sphinx-rtd-theme = "^0.4.3"
invoke = "^1.4.1"
protobuf = "^3.11.3"
googleapis-common-protos = "^1.51.0"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"
sphinxcontrib-spelling = "^5.0.0"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
