[tool.poetry]
name = "morpho"
version = "1.0.0b8"
description = "A framework for microservice based document transformation."
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://python-morpho.org/"
repository = "https://github.com/B4rtware/morpho"

keywords = ["microservice", "distributed-systems", "transform", "metamorphosis"]

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = """
    /typings
|   /tests
"""

[tool.poetry.dependencies]
python = "^3.8"
py-eureka-client = "^0.7.4"
waitress = "^1.4.2"
requests = "^2.22.0"
colorama = "^0.4.3"
flask = "^1.1.1"
toml = "^0.10.0"
pydantic = "^1.5.1"
regex = "^2020.6.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.6.0"
pyenchant = "^3.0.1"
Sphinx = "^3.0.1"
invoke = "^1.4.1"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"
sphinxcontrib-spelling = "^5.0.0"
pytest = "^6.0.2"
sphinxcontrib-openapi = "^0.7.0"
sphinx-material = "^0.0.30"
sphinx-issues = {git = "https://github.com/B4rtware/sphinx-issues.git"}
httpretty = "^1.0.2"

[tool.poetry.scripts]
morpho = "morpho.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
