[tool.poetry]
name = "echo"
version = "0.1.0"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
morpho = "^1.0.0-beta.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
