[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5.1"
morpho = "^1.0.0-alpha.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
