[tool.poetry]
name = "morpho-permuation"
version = "0.0.1"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
morpho = {git = "git@github.com:B4rtware/morpho.git"}
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
