[tool.poetry]
name = "morpho-vigenere"
version = "0.0.1"
description = ""
authors = ["B4rtware <34386047+B4rtware@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5.1"
morpho = "^1.0.0-beta.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
